[build-system]
requires = ["setuptools", "wheel"]

[tool.poetry]
name = "hcc"
version = "0.1.0"
description = "Tools used for the Hampton Court Canoe Club website"
authors = ["Andrie de Vries <apdevries@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

