[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "hcc"
version = "0.1.0"
description = "Tools used for the Hampton Court Canoe Club website"
authors = ["Andrie de Vries <apdevries@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.25"
astral = "^3.0"
beautifulsoup4 = "^4.9"
pandas = "^1.2"
plotly = "^4.14"
lxlm = "^4.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

